--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@nextui-org/react": "1.0.0-beta.10",
     "@rainbow-me/rainbowkit": "^0.5.0",
-    "ethers": "^5.0.0",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.0",
+    "ethers": "^5.7.0",
     "next": "^12.1.6",
+    "next-auth": "^4.10.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "siwe": "^1.1.6",
     "wagmi": "^0.6.0"
   },
   "devDependencies": {
