--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,6 +15,7 @@
     "ethers": "^5.7.0",
     "next": "^12.1.6",
     "next-auth": "^4.10.3",
+    "next-themes": "^0.2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "siwe": "^1.1.6",
